<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/grid"
    android:layout_width="344dp"
    android:layout_height="495dp"
    android:columnCount="2"
    android:rowCount="2"
    tools:context="fr.utt.if26.michel_tp04.GridActivity"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <Button
        android:id="@+id/button1"
        android:layout_gravity="left|top"
        android:text="@string/g01" />

    <Button
        android:id="@+id/button2"
        android:layout_gravity="left|top"
        android:text="@string/g02" />

    <Button
        android:id="@+id/button3"
        android:layout_gravity="left|top"
        android:text="@string/g03" />

    <Button
        android:id="@+id/button4"
        android:layout_gravity="left|top"
        android:text="@string/g04" />

</GridLayout>
