<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linear_global"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:context="fr.utt.if26.michel_tp04.MainActivity"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="283dp"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/view_nom"
                android:layout_width="348dp"
                android:layout_height="98dp"
                android:layout_weight="0.00"
                android:text="@string/nom"></TextView>
            <EditText
                android:id="@+id/input_nom"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text"/>

            <TextView
                android:id="@+id/view_prenom"
                android:layout_width="348dp"
                android:layout_height="98dp"
                android:layout_weight="0.00"
                android:text="@string/prenom"></TextView>
            <EditText
                android:id="@+id/input_prenom"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text"/>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:weightSum="1">
            <Button
                android:id="@+id/b01"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/b01" />
            <Button
                android:id="@+id/b02"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/b02" />
    </LinearLayout>

</LinearLayout>
